MobileApp/EthansDockerFiles/kube/grafana-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ethan
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafanaFiles
          mountPath: /etc/grafana/provisioning
      volumes:
      - name: grafanaFiles
        configMap:
          name: grafana-files
