MobileApp/EthansDockerFiles/kube/WebSvc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ethan
  name: blazor-web-service
spec:
  type: ClusterIP
  selector:
    app: blazor-web
  ports:
    - port: 80
      targetPort: 8080
