MobileApp/EthansDockerFiles/kube/collector-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ethan
  name: otel-collector-service
spec:
  type: ClusterIP
  selector:
    app: otel-collector
  ports:
    - port: 4317
      targetPort: 4317
