MobileApp/EthansDockerFiles/kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ethan
  name: grafana-service
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
