MobileApp/EthansDockerFiles/kube/WebIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ethan
  name: blazor-web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ethanscrazykubernetes.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
