MobileApp/EthansDockerFiles/kube/issuer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ethan
  name: blazor-web-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-ethane-production
spec:
  tls:
  - hosts:
    - ethanscrazykubernetes.duckdns.org
    secretName: ethane-kube-tls-production
  ingressClassName: nginx
  rules:
  - host: ethanscrazykubernetes.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blazor-web-service
            port:
              number: 80
